--- a/BitoDesktop.WPF/Pages/Products/ProductInfo.xaml
+++ b/BitoDesktop.WPF/Pages/Products/ProductInfo.xaml
@@ -7,9 +7,9 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
     Title="ProductInfo"
-    Width="800"
-    Height="600"
-    Background="{StaticResource AttentionToActionBrush}"
+    MinWidth="800"
+    MinHeight="600"
+    Background="#80000000"
     mc:Ignorable="d">
     <Page.Resources>
         <Style BasedOn="{StaticResource MaterialDesignRaisedButton}" TargetType="Button">
@@ -220,6 +220,7 @@
                     Content="Saqlash va yopish"
                     Foreground="White" />
             </Grid>
+            <Frame x:Name="MainFrame" Grid.ColumnSpan="2" />
         </Grid>
     </Border>
 </Page>
