--- a/BitoDesktop.WPF/Pages/Settings/SettingsPage.xaml
+++ b/BitoDesktop.WPF/Pages/Settings/SettingsPage.xaml
@@ -45,10 +45,12 @@
 
     <Grid>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="64" />
             <ColumnDefinition Width="1*" />
             <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
         <Border
+            Grid.Column="1"
             Height="368"
             VerticalAlignment="Top"
             Style="{StaticResource CustomBorder}">
@@ -143,6 +145,7 @@
         <Frame x:Name="MainFrame" Grid.Column="2" />
 
         <Border
+            Grid.Column="1"
             Height="48"
             Margin="10"
             VerticalAlignment="Bottom"
