--- a/BitoDesktop.WPF/Pages/Pos/PriceSelectPage.xaml
+++ b/BitoDesktop.WPF/Pages/Pos/PriceSelectPage.xaml
@@ -26,8 +26,8 @@
             <ComboBox
                 Width="312"
                 Height="56"
-                Margin="10"
-                md:HintAssist.Hint="Ombor"
+                Margin="0,20,0,10"
+                md:HintAssist.Hint="Narx"
                 md:TextFieldAssist.TextFieldCornerRadius="10"
                 Background="#F5F5F5"
                 BorderThickness="0"
@@ -38,6 +38,7 @@
             <Button
                 Width="312"
                 Height="48"
+                Margin="10"
                 md:ButtonAssist.CornerRadius="10"
                 Background="#006AFF"
                 Content="Saqlash"
