--- a/BitoDesktop.WPF/MainWindow.xaml
+++ b/BitoDesktop.WPF/MainWindow.xaml
@@ -20,14 +20,12 @@
                 <ColumnDefinition Width="64" />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <Frame
-                x:Name="SideBarFrame"
-                NavigationUIVisibility="Hidden"
-                Source="/Pages/SideBarPage.xaml" />
+            <Frame x:Name="SideBarFrame" NavigationUIVisibility="Hidden" />
             <Frame
                 x:Name="MainFrame"
                 Grid.ColumnSpan="2"
-                NavigationUIVisibility="Hidden" /><Frame
+                NavigationUIVisibility="Hidden" />
+            <Frame
                 x:Name="MainFrame2"
                 Grid.ColumnSpan="2"
                 NavigationUIVisibility="Hidden" />
