--- a/BitoDesktop.WPF/Controllers/Login/LoginController.xaml
+++ b/BitoDesktop.WPF/Controllers/Login/LoginController.xaml
@@ -6,7 +6,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
     Width="360"
-    Height="398"
+    Height="318"
     mc:Ignorable="d">
     <UserControl.Resources>
         <Style BasedOn="{StaticResource MaterialDesignOutlinedTextBox}" TargetType="TextBox">
@@ -33,7 +33,7 @@
     </UserControl.Resources>
     <Border
         Width="360"
-        Height="398"
+        Height="318"
         Background="#FFFFFF"
         CornerRadius="20">
         <StackPanel>
@@ -44,11 +44,6 @@
                 FontWeight="DemiBold"
                 Text="Kirish" />
             <TextBox
-                x:Name="ServerNameTxt"
-                md:ElevationAssist.Elevation="Dp16"
-                md:HintAssist.Hint="Server Nomi"
-                BorderThickness="0" />
-            <TextBox
                 x:Name="PhoneNumberTxt"
                 md:HintAssist.Hint="Telefon Raqam"
                 BorderThickness="0" />
@@ -57,6 +52,7 @@
                 md:HintAssist.Hint="Parol"
                 BorderThickness="0" />
             <Button
+                x:Name="LoginBtn"
                 Width="312"
                 Height="56"
                 Margin="12"
