--- a/BitoDesktop.WPF/Controllers/Login/ServerController.xaml
+++ b/BitoDesktop.WPF/Controllers/Login/ServerController.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="BitoDesktop.WPF.Controllers.Login.DeviceController"
+    x:Class="BitoDesktop.WPF.Controllers.Login.ServerController"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,11 +9,11 @@
     mc:Ignorable="d">
     <Border Background="#F5F5F5" CornerRadius="5">
         <TextBlock
-            x:Name="DeviceNameTxt"
+            x:Name="ServerNameTxt"
             Margin="10"
             VerticalAlignment="Center"
             FontSize="15"
             FontWeight="DemiBold"
-            Text="DeviceName" />
+            Text="ServerName" />
     </Border>
 </UserControl>
