--- a/BitoDesktop.WPF/Controllers/Login/DeviceController.xaml
+++ b/BitoDesktop.WPF/Controllers/Login/DeviceController.xaml
@@ -7,7 +7,10 @@
     Width="328"
     Height="42"
     mc:Ignorable="d">
-    <Border Background="#F5F5F5" CornerRadius="5">
+    <Border
+        x:Name="DeviceBorder"
+        Background="#F5F5F5"
+        CornerRadius="5">
         <TextBlock
             x:Name="DeviceNameTxt"
             Margin="10"
