Added EmployeeService ProductService

--- a/BitoDesktop.WPF/Pages/PosPage.xaml
+++ b/BitoDesktop.WPF/Pages/PosPage.xaml
@@ -245,7 +245,7 @@
                                 Height="48"
                                 Padding="5"
                                 VerticalContentAlignment="Center"
-                                md:HintAssist.Hint="Mahsulot nomi, barkod yoki SKU"
+                                md:HintAssist.Hint="Mijoz ismi yoki telefon raqami"
                                 BorderThickness="0"
                                 FontSize="12"
                                 FontWeight="DemiBold"
@@ -260,7 +260,7 @@
                                 md:ButtonAssist.CornerRadius="10"
                                 Background="White"
                                 BorderBrush="#E9E9E9"
-                                Content="/"
+                                Content="C"
                                 FontSize="10"
                                 FontWeight="DemiBold"
                                 Foreground="Black"
