--- a/BitoDesktop.WPF/Controllers/Pos/ProductSearchController.xaml
+++ b/BitoDesktop.WPF/Controllers/Pos/ProductSearchController.xaml
@@ -15,7 +15,7 @@
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
-                <ColumnDefinition />
+                <ColumnDefinition Width="60" />
             </Grid.ColumnDefinitions>
             <TextBlock
                 x:Name="NameTxt"
