--- a/BitoDesktop.WPF/Pages/PosPage.xaml
+++ b/BitoDesktop.WPF/Pages/PosPage.xaml
@@ -143,16 +143,25 @@
                                 Source="/Icons/frame.png" />
                         </Button>
                     </Grid>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition Width="72" />
+                            <ColumnDefinition Width="72" />
+                        </Grid.ColumnDefinitions>
+                        <ScrollViewer
+                            x:Name="SearchResultsProduct"
+                            Grid.RowSpan="2"
+                            Height="500"
+                            Margin="15,0"
+                            VerticalAlignment="Top"
+                            Style="{StaticResource MaterialDesignScrollViewer}"
+                            VerticalScrollBarVisibility="Auto">
+                            <ItemsControl x:Name="ProductSearchItems" />
+                        </ScrollViewer>
+                    </Grid>
 
-                    <ScrollViewer
-                        x:Name="SearchResultsProduct"
-                        Grid.RowSpan="2"
-                        Height="200"
-                        VerticalAlignment="Top"
-                        Style="{StaticResource MaterialDesignScrollViewer}"
-                        VerticalScrollBarVisibility="Auto">
-                        <ItemsControl x:Name="ProductSearchItems" />
-                    </ScrollViewer>
+
                     <ScrollViewer
                         x:Name="TabsViewer"
                         Height="42"
@@ -418,6 +427,7 @@
                         </Border>
                     </Grid>
                 </Border>
+
                 <ScrollViewer
                     x:Name="SearchResults"
                     Grid.RowSpan="2"
