--- a/BitoDesktop.WPF/Pages/PosPage.xaml
+++ b/BitoDesktop.WPF/Pages/PosPage.xaml
@@ -83,6 +83,13 @@
                                     Margin="10"
                                     VerticalAlignment="Center"
                                     Kind="Search" />
+
+
+                                <ComboBox
+                                    x:Name="SearchProductcb"
+                                    Grid.Column="1"
+                                    BorderThickness="0"
+                                    Style="{StaticResource MaterialDesignOutlinedComboBox}" />
                                 <TextBox
                                     x:Name="SearchProduct"
                                     Grid.Column="1"
@@ -95,6 +102,7 @@
                                     FontWeight="DemiBold"
                                     Style="{StaticResource MaterialDesignOutlinedTextBox}"
                                     TextChanged="SearchProduct_TextChanged" />
+
                                 <Button
                                     Grid.Column="2"
                                     Width="29"
@@ -142,23 +150,6 @@
                                 Height="24"
                                 Source="/Icons/frame.png" />
                         </Button>
-                    </Grid>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition />
-                            <ColumnDefinition Width="72" />
-                            <ColumnDefinition Width="72" />
-                        </Grid.ColumnDefinitions>
-                        <ScrollViewer
-                            x:Name="SearchResultsProduct"
-                            Grid.RowSpan="2"
-                            Height="500"
-                            Margin="15,0"
-                            VerticalAlignment="Top"
-                            Style="{StaticResource MaterialDesignScrollViewer}"
-                            VerticalScrollBarVisibility="Auto">
-                            <ItemsControl x:Name="ProductSearchItems" />
-                        </ScrollViewer>
                     </Grid>
 
 
@@ -431,7 +422,6 @@
                 <ScrollViewer
                     x:Name="SearchResults"
                     Grid.RowSpan="2"
-                    Height="200"
                     Margin="10,60"
                     VerticalAlignment="Top"
                     Style="{StaticResource MaterialDesignScrollViewer}"
